# EngineForAnimationCourse

./: .gitignore  CMakeLists.txt  CMakeLists1.txt  Doxyfile  README.md  newProject.ps1  newProject.sh
cmake/: Configurations.cmake  LibiglDownloadExternal.cmake  engine.cmake  libigl.cmake
docs/: Classes.drawio  class_diagram.drawio
engine/: AutoMorphingModel.cpp  AutoMorphingModel.h  Camera.cpp  Camera.h  Debug.h  DebugHacks.cpp  DebugHacks.h  Display.cpp  Display.h  DrawBuffer.cpp  DrawBuffer.h  DrawInfo.h  DrawVisitor.cpp  DrawVisitor.h  IndexBuffer.cpp  IndexBuffer.hpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Movable.cpp  Movable.h  OBJ_Loader.h  ObjLoader.cpp  ObjLoader.h  PickVisitor.cpp  PickVisitor.h  Program.cpp  Program.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneWithImGui.cpp  SceneWithImGui.h  Shader.cpp  Shader.h  Shape.cpp  (+17 more)
igl/: collapse_edge.cpp
igl/opengl/: MeshGL.cpp  Movable.cpp  Movable.h  ViewerCore.cpp  ViewerCore.h  ViewerData.cpp  ViewerData.h
igl/opengl/glfw/: Display.cpp  Display.h  Viewer.cpp  Viewer.h  ViewerPlugin.h  renderer.cpp  renderer.h
igl/opengl/glfw/imgui/: ImGuiHelpers.h  ImGuiMenu.cpp  ImGuiMenu.h  ImGuiTraits.h  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
igl/png/: texture_from_png.cpp
tutorial/: CMakeLists.txt
tutorial/Assignment1/: Assignment1.cpp  BasicScene.cpp  BasicScene.h  CamModel.h  Connector.cpp  Connector.h  SceneWithCameras.cpp  SceneWithCameras.h
tutorial/Assignment2/: Assignment2.cpp  BasicScene.cpp  BasicScene.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  UnalignedBox.cpp  UnalignedBox.h
tutorial/Demo/: BasicScene.cpp  CamModel.h  CmakeLists.txt  Demo.cpp  Demo.h  InputManager.h  SceneWithCameras.cpp  SimpleScene.cpp  SimpleScene.h  main.cpp
tutorial/Example1/: BasicScene.cpp  BasicScene.h  CMakeLists.txt  Example1.cpp  IglMeshLoader.cpp  IglMeshLoader.h  SceneWithCameras.cpp
tutorial/IK/: CMakeLists.txt  IK.cpp  IK.h  inputManager.h  main.cpp
tutorial/Simplification/: BasicScene.h  Simplification.cpp
tutorial/Test/: CMakeLists.txt  InputManager.h  Test.cpp  Test.h  main.cpp
tutorial/data/: README.md  camera.mtl
tutorial/data/scenes/: scene1.txt  scene5.txt
tutorial/sandBox/: CMakeLists.txt  inputManager.h  main.cpp  sandBox.cpp  sandBox.h
tutorial/shaders/: accumShader.glsl  accumShader.vs  basicShader.glsl  basicShader.vs  basicShader1.glsl  basicShader2.glsl  basicShader2.vs  basicShaderTex.glsl  cubemapShader.glsl  cubemapShader.vs  overlay.glsl  overlay_points.glsl  overlay_points.vs  phongShader.glsl  phongShader.vs  pickingShader.glsl  pickingShader.vs  pickingShader2.glsl  pickingShader2.vs  raytracingShader.vs
tutorial/tamir1/: CMakeLists.txt  configuration.txt  inputManager.h  sandBox.h
